进一步完善人物介绍页面

--- a/img/index.html
+++ b/img/index.html
@@ -23,38 +23,38 @@
         <div class="nav">
             <ul>
                 <li>
-                    <a href="#" target="_blank">首页</a>
+                    <a href="#" >首页</a>
                 </li>
                 <li>
-                    <a href="../img/register.html" target="_blank">登录</a>
+                    <a href="../img/register.html">登录</a>
                 </li>
                  <li>
-                    <a href="../img/introduce.html" target="_blank">角色介绍</a>
+                    <a href="../img/introduce.html" >角色介绍</a>
                 </li>
                 <li>
-                    <a href="../img/jianjie.html" target="_blank">动漫简介</a>
+                    <a href="../img/jianjie.html" >动漫简介</a>
                 </li>
                 <li>
-                    <a href="#" target="_blank">动漫制作</a>
+                    <a href="#" >动漫制作</a>
                 </li>
                 <li>
-                    <a href="../img/xuanji.html" target="_blank">玄机科技</a>
+                    <a href="../img/xuanji.html" >玄机科技</a>
                 </li>
                 <li>
-                    <a href="#" target="_blank">作品设定</a>
+                    <a href="#" >作品设定</a>
                 </li>
                
                <li>
-                    <a href="#" target="_blank">超然剪辑</a>
+                    <a href="#" >超然剪辑</a>
                 </li>
                 <li>
-                    <a href="#" target="_blank">相关漫画</a>
+                    <a href="#" >相关漫画</a>
                 </li>
                 <li>
-                    <a href="#" target="_blank">讨论</a>
+                    <a href="#" >讨论</a>
                 </li>
                 <li>
-                    <a href="../img/world.html" target="_blank">世界</a>
+                    <a href="../img/world.html" >世界</a>
                 </li>
             </ul>
         </div>
@@ -66,12 +66,12 @@
                 <div class="left">
                     <h2>动漫相关</h2>
                     <ul>
-                        <li><a href="#" target="_blank">改编小说</a></li>
-                        <li><a href="#" target="_blank">官方微博</a></li>
-                        <li><a href="#" target="_blank">官方超话</a></li>
-                        <li><a href="#" target="_blank">音乐</a></li>
-                        <li><a href="#" target="_blank">壁纸</a></li>
-                        <li><a href="#" target="_blank">视频</a></li>
+                        <li><a href="#" >改编小说</a></li>
+                        <li><a href="#" >官方微博</a></li>
+                        <li><a href="#" >官方超话</a></li>
+                        <li><a href="#" >音乐</a></li>
+                        <li><a href="#" >壁纸</a></li>
+                        <li><a href="#" >视频</a></li>
                     </ul>
                 </div>
                 <div class="center">
@@ -80,19 +80,19 @@
                 <div class="right">
                     <div class="news">
                     <em style="font-size: 16px; border-bottom: 3px solid black; color: white;">最新资讯</em>
-                    <div><a href="#" style="text-decoration: none; color: white; margin-left: 150px;" target="_blank">更多资讯></a></div>
+                    <div><a href="#" style="text-decoration: none; color: white; margin-left: 150px;" >更多资讯></a></div>
                     </div>
                     <div class="zixun">
                         <ul>
-                            <li><a href="#" target="_blank">对峙、蜕变、无惧、归来！《吞噬星空》宇宙篇终极预告上线，罗峰携手五位英雄向金角巨兽发起殊死一战。渺小又脆弱的人类，或许也能迸发出意想不到的力量。这，是人类最后的机会！
+                            <li><a href="#" >对峙、蜕变、无惧、归来！《吞噬星空》宇宙篇终极预告上线，罗峰携手五位英雄向金角巨兽发起殊死一战。渺小又脆弱的人类，或许也能迸发出意想不到的力量。这，是人类最后的机会！
                                 10月3日起每周二10点，腾讯视频全网独播！</a></li>
-                            <li><a href="#" target="_blank">地球存亡危在旦夕，英雄献祭舍生取义。罗峰涅槃归来迎战金角巨兽，开启宇宙副本。迈向浩瀚征战星际，抵御强敌破局新生！《吞噬星空》正式定档10月3日，这一次，继续为人类而战</a></li>
-                            <li><a href="#" target="_blank">罗峰的好兄弟方逸今日上线了！为庆祝#神藏动画开播#， 邀请各位一起组队探险，赏文玩，踏阴阳，寻神藏！11月7日起，每周二10：00来腾讯视频，充满神秘色彩的异世界冒险之旅等着你！@阅文漫镜头 ​​​</a></li>
-                            <li><a href="#" target="_blank">第92集更新！梦回最初！斩杀地球最后一只兽皇光速穿行！开启宇宙文明全新征程 ​​​</a></li>
-                            <li><a href="#" target="_blank">以你之力，为罗峰地球巡查计划再添一城！11月3日-11月10日，在 吞噬星空超话 中发帖参与许愿活动，当许愿帖数量达到1003条，即视为愿力值蓄达成「再添一城」成就。时间刻不容缓，快来参与吧！ ​​​</a></li>
-                            <li><a href="#" target="_blank">英雄回归步履不停，罗峰地球巡查计划第二轮火热加载中！#欢迎罗峰来我家乡# 官方已根据热度在提名环节中，筛选出10座城市。到底哪2座城市能够迎来罗城主的降临，11月3日-11月11日扫码投票，快来为你的城市投出宝贵的一票吧！ ​​​</a></li>
-                            <li><a href="#" target="_blank">徐欣前来贺#武双姝# 开播，燃血勇之力，破五州混沌，和#武双姝#的骆十七和夏知秋一起踏上这场勇者征途吧！每周三10:00更新，首周腾讯视频连播三集，我们不见不散！ ​​​</a></li>
-                            <li><a href="#" target="_blank">亲人相伴左右，英雄终会苏醒，所有失去的，都会以另一种方式归来！守护无声，十一月冰山壁纸奉上。 ​​​</a></li>
+                            <li><a href="#" >地球存亡危在旦夕，英雄献祭舍生取义。罗峰涅槃归来迎战金角巨兽，开启宇宙副本。迈向浩瀚征战星际，抵御强敌破局新生！《吞噬星空》正式定档10月3日，这一次，继续为人类而战</a></li>
+                            <li><a href="#" >罗峰的好兄弟方逸今日上线了！为庆祝#神藏动画开播#， 邀请各位一起组队探险，赏文玩，踏阴阳，寻神藏！11月7日起，每周二10：00来腾讯视频，充满神秘色彩的异世界冒险之旅等着你！@阅文漫镜头 ​​​</a></li>
+                            <li><a href="#" >第92集更新！梦回最初！斩杀地球最后一只兽皇光速穿行！开启宇宙文明全新征程 ​​​</a></li>
+                            <li><a href="#" >以你之力，为罗峰地球巡查计划再添一城！11月3日-11月10日，在 吞噬星空超话 中发帖参与许愿活动，当许愿帖数量达到1003条，即视为愿力值蓄达成「再添一城」成就。时间刻不容缓，快来参与吧！ ​​​</a></li>
+                            <li><a href="#" >英雄回归步履不停，罗峰地球巡查计划第二轮火热加载中！#欢迎罗峰来我家乡# 官方已根据热度在提名环节中，筛选出10座城市。到底哪2座城市能够迎来罗城主的降临，11月3日-11月11日扫码投票，快来为你的城市投出宝贵的一票吧！ ​​​</a></li>
+                            <li><a href="#" >徐欣前来贺#武双姝# 开播，燃血勇之力，破五州混沌，和#武双姝#的骆十七和夏知秋一起踏上这场勇者征途吧！每周三10:00更新，首周腾讯视频连播三集，我们不见不散！ ​​​</a></li>
+                            <li><a href="#" >亲人相伴左右，英雄终会苏醒，所有失去的，都会以另一种方式归来！守护无声，十一月冰山壁纸奉上。 ​​​</a></li>
                         </ul>
                     </div>
                 </div>    
@@ -101,12 +101,12 @@
                     <div class="left">
                         <div class="top">
                         <span class="title" style="margin-left: 35px;">推荐线路</span>
-                        <span class="item"><a href="#" target="_blank">腾讯视频</a></span>
-                        <span class="item"><a href="#" target="_blank">豆瓣电影</a></span>
-                        <span class="item"><a href="#" target="_blank">优酷视频</a></span>
-                        <span class="item"><a href="#" target="_blank">人民网</a></span>
-                        <span class="item"><a href="#" target="_blank">光明网</a></span>
-                        <em class="more"><a href="#" target="_blank">其他线路></a></em>
+                        <span class="item"><a href="#" >腾讯视频</a></span>
+                        <span class="item"><a href="#" >豆瓣电影</a></span>
+                        <span class="item"><a href="#" >优酷视频</a></span>
+                        <span class="item"><a href="#" >人民网</a></span>
+                        <span class="item"><a href="#" >光明网</a></span>
+                        <em class="more"><a href="#" >其他线路></a></em>
                         </div>
                         <div class="bottom">
                             <div class="bottomleft">
@@ -115,7 +115,7 @@
                                     <em>01</em>
                                     <span style="font-weight: 700; color: white;">共同开启宇宙探索之旅</span>
                                 </p>
-                                <a href="#" target="_blank" style="color: yellow;">茫茫宇宙中究竟蕴藏着何种奥秘？</a>
+                                <a href="#"  style="color: yellow;">茫茫宇宙中究竟蕴藏着何种奥秘？</a>
                             </div>
                             <img id="jt" src="../img/photo/trip_arrow_down.png" alt="">
                                 <div class="pic">
@@ -130,7 +130,7 @@
                                  <em>02</em>   
                                  <span>火星场景预告</span>
                             </h3>
-                            <a href="#" target="_blank" style="text-decoration: none; color: rgb(191, 0, 255);">宇宙之旅第一站，外星钢铁城市上线</a>
+                            <a href="#"  style="text-decoration: none; color: rgb(191, 0, 255);">宇宙之旅第一站，外星钢铁城市上线</a>
                             </div>
                         </div>
                         
@@ -142,7 +142,7 @@
                                     <em>03</em>
                                     <span>姬青角色预告</span>
                             </h3>
-                            <a href="#" target="_blank" style="text-decoration: none; color: rgb(0, 200, 255);">拥有三重领域的恒星级特级精英来袭</a>
+                            <a href="#"  style="text-decoration: none; color: rgb(0, 200, 255);">拥有三重领域的恒星级特级精英来袭</a>
                             </div>
                         </div>
                         <div class="item">
@@ -153,16 +153,16 @@
                                  <em>04</em>   
                                  <span>白蓝星场景预告</span>
                             </h3>
-                            <a href="#" target="_blank" style="text-decoration: none; color: red;">万光年外的极寒粮仓交易中</a>
+                            <a href="#"  style="text-decoration: none; color: red;">万光年外的极寒粮仓交易中</a>
                             </div>
                         </div>
                     </div>
                     </div>
                     </div>
                     <div class="right">
-                        <a href="https://video.weibo.com/show?fid=1034:4960431039512591" target="_blank"><img src="../img/photo/罗峰婚礼.jpg" alt="" style="margin-top: 31px;"></a>
-                        <a href="https://video.weibo.com/show?fid=1034:4932346106019852" target="_blank"><img src="../img/photo/乎延博.jpg" alt=""></a>
-                        <a href="https://wx2.sinaimg.cn/mw690/e7cfa90fgy1hikhv02xbcj20u045l1fc.jpg" target="_blank"><img src="../img/photo/动漫校园行.png" alt=""></a>
+                        <a href="https://video.weibo.com/show?fid=1034:4960431039512591" ><img src="../img/photo/罗峰婚礼.jpg" alt="" style="margin-top: 31px;"></a>
+                        <a href="https://video.weibo.com/show?fid=1034:4932346106019852" ><img src="../img/photo/乎延博.jpg" alt=""></a>
+                        <a href="https://wx2.sinaimg.cn/mw690/e7cfa90fgy1hikhv02xbcj20u045l1fc.jpg" ><img src="../img/photo/动漫校园行.png" alt=""></a>
                     </div>
             </div> 
         </div>
@@ -172,7 +172,7 @@
                 <div class="con" style="left: 0px;">
                     <div class="left" style="position: relative;">
                         <div class="pic">
-                            <a href="https://www.baidu.com/link?url=nf_914g0-NJjrIT0F_1rS_NK0nHbpSrkJ4CmABftLqX4PMnDD45tNDd8yrTgWGtxhaeOyZpW_PH-LEO1Fyn70d3YEl4OZ_V5U9B4cRTBRoq&wd=&eqid=91492101006218690000000665558e13" target="_blank">
+                            <a href="https://www.baidu.com/link?url=nf_914g0-NJjrIT0F_1rS_NK0nHbpSrkJ4CmABftLqX4PMnDD45tNDd8yrTgWGtxhaeOyZpW_PH-LEO1Fyn70d3YEl4OZ_V5U9B4cRTBRoq&wd=&eqid=91492101006218690000000665558e13" >
                                 <img src="../img/photo/刺客伍六七.jpeg" alt="">
                             </a>
                             <span class="lable">
@@ -189,7 +189,7 @@
                     </div>
                     <div class="left" style="position: relative;">
                         <div class="pic">
-                            <a href="https://www.baidu.com/link?url=2jh2EFXmHIVulhJLuRzryNeq4ZPbiO8ZNdxHiD5_bdzWBm4sFUWNlNEk0xj4X6oFORTpClTECsLhqyzhnWxO-a&wd=&eqid=9c4e898d00ce12dd0000000665558eb5" target="_blank">
+                            <a href="https://www.baidu.com/link?url=2jh2EFXmHIVulhJLuRzryNeq4ZPbiO8ZNdxHiD5_bdzWBm4sFUWNlNEk0xj4X6oFORTpClTECsLhqyzhnWxO-a&wd=&eqid=9c4e898d00ce12dd0000000665558eb5" >
                                 <img src="../img/photo/斗破苍穹.jpg" alt="">
                             </a>
                             <span class="lable">
@@ -206,7 +206,7 @@
                     </div>
                     <div class="left" style="position: relative;">
                         <div class="pic">
-                            <a href="https://www.baidu.com/link?url=8Hs1ttQDE8yArcLFwmtvxTHOBMQDWuY4B5nIDRJZNhlifDDpmdt8TB3yvSZZpyZVm-G93nRqafgJMxVn7YTciq&wd=&eqid=9e13a27100cbc9730000000665558ef5" target="_blank">
+                            <a href="https://www.baidu.com/link?url=8Hs1ttQDE8yArcLFwmtvxTHOBMQDWuY4B5nIDRJZNhlifDDpmdt8TB3yvSZZpyZVm-G93nRqafgJMxVn7YTciq&wd=&eqid=9e13a27100cbc9730000000665558ef5" >
                                 <img src="../img/photo/斗罗大陆.webp" alt="">
                             </a>
                             <span class="lable">
@@ -223,7 +223,7 @@
                     </div>
                     <div class="left" style="position: relative;">
                         <div class="pic">
-                            <a href="#" target="_blank">
+                            <a href="#" >
                                 <img src="../img/photo/火影.png" alt="">
                             </a>
                             <span class="lable">
@@ -240,7 +240,7 @@
                     </div>
                     <div class="left" style="position: relative;">
                         <div class="pic">
-                            <a href="#" target="_blank">
+                            <a href="#" >
                                 <img src="../img/photo/暗河传.jpg" alt="">
                             </a>
                             <span class="lable">
@@ -266,13 +266,13 @@
             <h1 class="titleline" style="color: aqua;">分集剧情</h1>
             <ul>
                 <li class="first">
-                    <a href="#" target="_blank" style="position: relative;">
+                    <a href="#"  style="position: relative;">
                         <img src="../img/photo/第一集.webp" alt="">
                         <p>第一集</p>
                     </a>
                 </li>
                 <li>
-                    <a href="#" target="_blank">
+                    <a href="#" >
                         <img src="../img/photo/第二集.webp" alt="">
                     <p>第二集</p>
                     </a>
@@ -332,7 +332,7 @@
         <h1 class="titleend" style="color: aqua;">场景解说</h1>
         <div class="titleadd" style="color: white;">浩瀚宇宙，携手同行</div>
         <div class="titlemore">
-            <a href="#" target="_blank" style="text-decoration:none; color: white;">MORE>></a>
+            <a href="#"  style="text-decoration:none; color: white;">MORE>></a>
         </div>
         <div class="circle">
             <ul>
