--- a/img/register.html
+++ b/img/register.html
@@ -13,37 +13,37 @@
     <div class="daohang">
         <ul>
             <li>
-                <a href="../img/index.html" target="_blank">首页</a>
+                <a href="../img/index.html">首页</a>
             </li>
             <li>
-                <a href="../img/jianjie.html" target="_blank">动漫简介</a>
+                <a href="../img/jianjie.html">动漫简介</a>
             </li>
             <li>
-                <a href="#" target="_blank">动漫制作</a>
+                <a href="#">动漫制作</a>
             </li>
             <li>
-                <a href="../img/xuanji.html" target="_blank">玄机科技</a>
+                <a href="../img/xuanji.html">玄机科技</a>
             </li>
             <li>
-                <a href="#" target="_blank">作品设定</a>
+                <a href="#">作品设定</a>
             </li>
             <li>
-                <a href="../img/introduce.html" target="_blank">角色介绍</a>
+                <a href="../img/introduce.html">角色介绍</a>
             </li>
            <li>
-                <a href="#" target="_blank">超然剪辑</a>
+                <a href="#">超然剪辑</a>
             </li>
             <li>
-                <a href="#" target="_blank">相关漫画</a>
+                <a href="#">相关漫画</a>
             </li>
             <li>
-                <a href="#" target="_blank">讨论</a>
+                <a href="#">讨论</a>
             </li>
             <li>
-                <a href="../img/world.html" target="_blank">世界</a>
+                <a href="../img/world.html">世界</a>
             </li>
             <li>
-                <a href="../img/register.html" target="_blank" style="margin-left: 220px;">登录</a>
+                <a href="../img/register.html" style="margin-left: 220px;">登录</a>
                 <img src="../img/photo/登录.png" alt="">
             </li>
         </ul>
@@ -71,7 +71,7 @@
             <img class="hidden"  src="../img/photo/密码隐藏.png" alt="">
             <img  class="visit"  src="../img/photo/密码可见.png" alt="">
             <br>
-            <!-- <a href="../img/index.html" target="_blank" class="go">GO</a> -->
+            <!-- <a href="../img/index.html" class="go">GO</a> -->
             <input type="submit" value="登录" class="go" id="denglu">
             <a href="#" style="margin: 0 auto;" class="zhuce" id="gozhuce">还没有账号？前往注册</a>
         </div>
@@ -101,7 +101,7 @@
             <img class="hide"  src="../img/photo/密码隐藏.png" alt="">
             <img  class="see"  src="../img/photo/密码可见.png" alt="">
             <br>
-            <!-- <a href="../img/index.html" target="_blank" class="go">GO</a> -->
+            <!-- <a href="../img/index.html" class="go">GO</a> -->
             <input type="submit" value="注册" class="go" id="zhuce">
             <a href="#" style="margin: 0 auto;" class="denglu" id="gologin">已有账号？前往登录</a>
         </div>
@@ -372,10 +372,11 @@ const gologin = document.querySelector('#gologin')
             login.style.display ='flex'
             register.style.display = 'none' })
 
+
+
         // 登录
         const denglu = document.querySelector('#denglu')
         denglu.addEventListener("click",function(event){
-           
             var myHeaders1 = new Headers();
             myHeaders1.append("User-Agent", "Apifox/1.0.0 (https://apifox.com)");
             myHeaders1.append("Content-Type", "application/json");
