--- a/img/xuanji.html
+++ b/img/xuanji.html
@@ -12,37 +12,37 @@
     <div class="daohang">
         <ul>
             <li>
-                <a href="../img/index.html" target="_blank">首页</a>
+                <a href="../img/index.html">首页</a>
             </li>
             <li>
-                <a href="../img/jianjie.html" target="_blank">动漫简介</a>
+                <a href="../img/jianjie.html">动漫简介</a>
             </li>
             <li>
-                <a href="#" target="_blank">动漫制作</a>
+                <a href="#">动漫制作</a>
             </li>
             <li>
-                <a href="../img/xuanji.html" target="_blank">玄机科技</a>
+                <a href="../img/xuanji.html">玄机科技</a>
             </li>
             <li>
-                <a href="#" target="_blank">作品设定</a>
+                <a href="#">作品设定</a>
             </li>
             <li>
-                <a href="../img/introduce.html" target="_blank">角色介绍</a>
+                <a href="../img/introduce.html">角色介绍</a>
             </li>
            <li>
-                <a href="#" target="_blank">超然剪辑</a>
+                <a href="#">超然剪辑</a>
             </li>
             <li>
-                <a href="#" target="_blank">相关漫画</a>
+                <a href="#">相关漫画</a>
             </li>
             <li>
-                <a href="#" target="_blank">讨论</a>
+                <a href="#">讨论</a>
             </li>
             <li>
-                <a href="../img/world.html" target="_blank">世界</a>
+                <a href="../img/world.html">世界</a>
             </li>
             <li style="float: right; margin-right: 50px;" class="list">
-                <a href="../img/register.html" target="_blank" style="position: relative;">旗下品牌</a>
+                <a href="../img/register.html" style="position: relative;">旗下品牌</a>
                 <img src="../img/photo/元素1.webp" alt="">
             </li>
         </ul>
